--- a/.drone.yml
+++ b/.drone.yml
@@ -8,16 +8,16 @@ pipeline:
             - fluentcv BUILD cv.json TO out/cv.all -t node_modules/jsonresume-theme-simplistic
             - echo "Deploying"
     deploy:
-        rsync:
-            user: hakloev
-            host: hakloev.no
-            port: 723
-            source: out/
-            target: /srv/cv/
-            delete: false
-            recursive: true
-            exclude:
-            when:
-                branch: master
-            script:
-                - echo "Done"
+        image: plugins/rsync
+        user: hakloev
+        host: hakloev.no
+        port: 723
+        source: out/
+        target: /srv/cv/
+        delete: false
+        recursive: true
+        exclude:
+        when:
+            branch: master
+        script:
+            - echo "Done"
